scale index and sorting

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,20 @@ SHARED_ROCKSDB_PATH=/data/shared_rocksdb
 SHARED_CLICKHOUSE_DSN=tcp://localhost:9000?debug=true
 POSTGRES_DSN=postgres://user:pass@localhost:5432/core
 
+# Distributed Mode Configuration
+# Set to "true" to enable distributed/horizontal scaling mode
+DISTRIBUTED_MODE=false
+
+# ClickHouse Cluster Configuration (only used when DISTRIBUTED_MODE=true)
+CLUSTER_NAME=analytics_cluster
+# Format: host:port:database:shard:replica (comma-separated for multiple nodes)
+# Example: "node1:9000:analytics:1:1,node2:9000:analytics:2:1,node3:9000:analytics:3:1"
+CLUSTER_NODES=localhost:9000:analytics:1:1
+
+# Partitioning Strategy
+PARTITION_KEY=tenant_id
+SHARDING_KEY=tenant_id
+
 # Optional: Development settings
 GO_ENV=development
 LOG_LEVEL=info
